[package]
name = "calexp"
version = "0.1.0"
authors = ["Pablo Fernández Serrano <pablofs02@tutanota.com>"]
edition = "2021"
description = "Calculadora de expresiones matemáticas"
readme = "DOCTRINA"
repository = "https://github.com/pablofs02/calexp/"
license = "GPL-3.0-or-later"
keywords = ["minimalista", "rust", "libre", "linux"]
categories = []

[dependencies]
